@@ -31,6 +31,7 @@ depth: 1
  * Update BeautifulSoup upper bound to 4.12.x (scott-8)
  * Migrate initialization of classes (such as `body.ready`) from multiple JavaScript implementations to one Stimulus controller `w-init` (Chiemezuo Akujobi)
  * Adopt the usage of of translate string literals using `arg=_('...')` in all `wagtailadmin` module templates (Chiemezuo Akujobi)
+ * Migrate the contrib styleguide index view to a class based view (Chiemezuo Akujobi)
 
 
 ## Upgrade considerations - changes affecting all projects
